# UGAS-beta

./: .gitignore  CMakeLists.txt  README.md  package.xml  records.csv
.cache/clangd/index/: Detector.cpp.4E30BC42F76C478C.idx
Detector/: CMakeLists.txt
Detector/Inc/: Detector.h  LightDescriptor.h  TinyXML.h
Detector/src/: Detector.cpp  LightDescriptor.cpp  TinyXML.cpp
cmake/: FindHikCameraSDK.cmake
doc/: TrajectorySolution.md
model/: NINNModel.onnx
src/: main.cpp
src/ArmorDescriptor/: ArmorDescriptor.h
src/Collector/: DataCollector.cpp  DataCollector.h
src/Detector/: Detector.cpp  Detector.h
src/HikCamera/: HikCamera.cpp  HikCamera.h  HikCameraInterface.h
src/Identify/: NumberIdentify.cpp  NumberIdentify.h  NumberIdentifyInterface.h
src/LightDescriptor/: LightDescriptor.h
src/PanTiltUtil/: PanTilt.cpp  PanTilt.h
src/Parameters/: Parameters.h
src/PnPSolver/: Parameters.h  PnPSolver.cpp  PnPSolver.h
src/ROS2Util/: PitchSubscriber.h  PkgSubscriber.h  Publisher.h  Subscriber.h
src/RoboticDescriptor/: RoboticDescriptor.h
src/Serial/: Serial.cpp  Serial.h
src/Serial/crc/: crc.h
src/Trajectory/: Trajectory.cpp  Trajectory.h
